# practice-python

./: README.md  pyproject.toml
src/: requirements.txt  setup.py
src/lgtm/: __init__.py  cli.py  core.py  drawer.py  image_source.py
