[project]
name = "lgtm"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "maaaato", email = "igosso.mato@gmail.com" }
]
dependencies = [
    "pytest~=7.4.0",
    "lgtm",
    "requests~=2.31.0",
    "Click~=8.1.3",
    "Pillow~=9.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
