[project]
name = "lgtm"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "maaaato", email = "igosso.mato@gmail.com" }
]
dependencies = [
    "pytest~=7.4.0",
    "lgtm",
    "requests~=2.31.0",
    "Click~=8.1.3",
    "Pillow~=9.5.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "black~=23.3.0",
    "flake8~=5.0.4",
    "isort~=5.12.0",
    "mypy~=1.4.1",
    "pyproject-flake8~=5.0.4.post1",
]

[tool.hatch.metadata]
allow-direct-references = true
